--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@discowod_packages/owojs",
+  "name": "wewwitten-javascwipt",
   "version": "0.0.1",
   "description": "console. but owo",
   "main": "index.js",
