--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "wewwitten-javascwipt",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "console. but owo",
   "main": "index.js",
   "scripts": {
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/DrNoSleep/owo.js.git"
+    "url": "https://github.com/DrNoSleep/wewwitten-javascwipt.git"
   },
   "keywords": [
     "owo",
@@ -19,7 +19,7 @@
   "author": "discowod.com",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DrNoSleep/owo.js/issues"
+    "url": "https://github.com/DrNoSleep/wewwitten-javascwipt/issues"
   },
-  "homepage": "https://github.com/DrNoSleep/owo.js#readme"
+  "homepage": "https://github.com/DrNoSleep/wewwitten-javascwipt#readme"
 }
