--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wewwitten-javascwipt",
-  "version": "0.0.7",
-  "description": "console. but owo",
+  "version": "0.0.8",
+  "description": "Owoified javascript?",
   "main": "index.js",
   "scripts": {
     "test": "echo owo whats this?"
