--- a/.github/workflows/ucf.yml
+++ b/.github/workflows/ucf.yml
@@ -1,7 +1,7 @@
 name: Update CONTRIBUTORS file
 on:
   schedule:
-    - cron: "* * * * *"
+    - cron: "5 * * * *"
   workflow_dispatch:
 jobs:
   main:
