--- a/.github/workflows/ucf.yml
+++ b/.github/workflows/ucf.yml
@@ -1,5 +1,8 @@
 name: Update CONTRIBUTORS file
+
 on:
+  push:
+    branches: [ main ]
   schedule:
     - cron: "5 * * * *"
   workflow_dispatch:
@@ -16,5 +19,5 @@ jobs:
           commit-msg: Update Contributors
           github-token: ${{ secrets.GITHUB_TOKEN }}
         env:
-          CONTRIB_REPOSITORY: 'DrNoSleep/wewwitten-javascwipt'
+          CONTRIB_REPOSITORY: 'DiscowdTheDev/wewwitten-javascwipt'
           CONTRIB_OUTPUT_FILE: 'CONTRIBUTORS.md'
